@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.12.16-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-12-16 18:56:35, took 00:12:11, with 50 workers, on 855 cases, 0 failed, 0 traces, 11 retries
+-;-;-;2025-12-16 19:27:07, took 00:10:36, with 50 workers, on 855 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
