@@ -17735,3 +17735,6 @@ qc pass: sdwan over http
 qc pass: sampled flow inspection
 ---------------------------------- 2025-12-16 05:40:37 25.12.16
 qc pass: policed flow inspection
+---------------------------------- 2025-12-16 19:02:52 25.12.16
+no qc pass: ingress label filtering with pvrp
+failed: ingress label filtering with pvrp
